--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 server:
-  port: 8081
+  port: 8084
 
 spring:
   application:
     name: bugsolver
+  web:
+    resources:
+      static-locations: classpath:/static/,classpath:/template/
+
+mvc:
+  static-path-pattern: /**
